# lexi_term

./: .gitignore  pyproject.toml  requirements.txt
codes/: LEXI_exposure_map.py  LEXI_exposure_map_fnc.py  LEXI_exposure_map_parallel.py  LEXI_exposure_map_parallel_fnc.py  LEXI_exposure_map_parallel_v2.py  SAMPLE_LEXI_pointing_ephem.csv  SAMPLE_LEXI_pointing_ephem_edited.csv  lxi_csv_to_cdf.py  lxi_data_read_fncs_v2.5.py  lxi_file_read_funcs.py  lxi_gui_config.py  lxi_gui_plot_routines.py  lxi_misc_codes.py  lxi_term.py  script.sh  text_color.py  text_color_fnc.py
data/GSFC/2022_05_02_1104_LEXI_Raw_unit_1_mcp_unit_1_eBox_2300V/: 2022_04_29_1343_LEXI_HK_unit_1_mcp_unit_1_eBox_2100V_hk_.csv  2022_05_02_0847_LEXI_HK_unit_1_mcp_unit_1_eBox_2200V_hk_.csv  2022_05_02_1104_LEXI_HK_unit_1_mcp_unit_1_eBox_2300V_hk_.csv
data/PIT/20221114/: 20221114_175655_FID-1_payload_lexi_1706244043_19540.dat.txt  20221114_180156_FID-2_payload_lexi_1706244343_39427.dat.txt  20221114_180657_FID-3_payload_lexi_1706244644_39572.dat.txt  20221114_181158_FID-4_payload_lexi_1706244945_39127.dat.txt  20221114_181659_FID-5_payload_lexi_1706245246_39352.dat.txt  20221114_182200_FID-6_payload_lexi_1706245547_39561.dat.txt  20221114_182701_FID-7_payload_lexi_1706245848_39194.dat.txt  20221114_183202_FID-8_payload_lexi_1706246149_39439.dat.txt  20221114_183703_FID-9_payload_lexi_1706246450_39725.dat.txt  (+2 more)
git_figures/: exposure_map_test_xres_0.1_yres_0.1_tres_100L.html
processed_data/hk/: package_list_hk_output.csv  sample_binary_dataset_hk_output.csv
processed_data/sci/: package_list_sci_output.csv
(+14 files in other folders)
