[tool.poetry]
name = "lexi_term"
version = "0.1.0"
description = ""
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
seaborn = "^0.11.2"
tk = "^0.1.0"
pyinstaller = "^5.1"
pandas = "^1.5.3"
tabulate = "^0.9.0"
matplotlib = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
